--- a/ecom-backend/.env
+++ b/ecom-backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI = mongodb+srv://abhi:12345@cluster0.qxhox.mongodb.net/Ecom?retryWrites=true&w=majority
-KEY_ID=rzp_test_9ynKRozO1YO0Gq
-KEY_SECRET=tooPs4kf9QDto0JxqQsB0KMU
+MONGO_URI = //your mongo db uri here
+KEY_ID=//your razorpay key id
+KEY_SECRET=//your razorpay key secret here
